# fingerprint-jetson-nano

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements-onnx.txt  requirements.txt  setup.py
app/: __init__.py  main.py
app/api/: __init__.py  schemas.py
app/api/routers/: __init__.py  models.py  sensor.py  system.py  users.py  verification.py
app/core/: __init__.py  config.py  crypto_utils.py  lifespan.py
app/database/: __init__.py  crypto.py  database.py  models.py  repository.py
app/drivers/: __init__.py  sensor.py
app/mqtt/: __init__.py  client.py  handlers.py  payloads.py
app/pipeline/: __init__.py  faiss_index.py  graph_builder.py  inference_engine.py  minutiae_extractor.py  pipeline.py  preprocessing.py  profiler.py
app/services/: __init__.py  model_service.py  pipeline_service.py  sensor_service.py  system_service.py  task_service.py
config/: default.yaml
gui/: __main__.py  api_client.py  main_window.py
gui/widgets/: fingerprint_stream.py  register_panel.py  verify_panel.py  worker_info.py
scripts/: run_gui.sh  setup_jetson.sh  setup_jetson_env.sh
tests/: test_crypto.py
