[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fingerprint-jetson-worker"
version = "2.1.0"
description = "Installable fingerprint worker for Jetson-based verification nodes"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MDGT" }
]
dependencies = [
  "aiofiles>=23,<25",
  "click>=8.1,<9",
  "cryptography>=41,<46",
  "fastapi>=0.95,<1.0",
  "httpx>=0.25,<1.0",
  "numpy>=1.24,<2.0",
  "paho-mqtt>=1.6,<2.0",
  "pillow>=10,<12",
  "pydantic>=2.5,<3.0",
  "pydantic-settings>=2.1,<3.0",
  "python-dateutil>=2.8,<3.0",
  "python-multipart>=0.0.6,<1.0",
  "pyusb>=1.2.1,<2.0",
  "pyyaml>=6,<7",
  "requests>=2.31,<3.0",
  "uvicorn[standard]>=0.23,<1.0",
  "websocket-client>=1.7,<2.0",
  "websockets>=10,<16",
]

[project.optional-dependencies]
ai = [
  "onnxruntime>=1.17.3,<1.18",
  "faiss-cpu>=1.7.4,<2.0",
  "opencv-python>=4.8,<5.0",
]
jetson = [
  "onnxruntime>=1.17.3,<1.18",
  "faiss-cpu>=1.7.4,<2.0",
  "opencv-python>=4.8,<5.0",
]
onnx = [
  "onnxruntime>=1.17.3,<1.18",
]
faiss = [
  "faiss-cpu>=1.7.4,<2.0",
]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1.0",
]
ssh = [
  "asyncssh>=2.14,<3.0",
]
gui = [
  'PyQt6>=6.5,<7.0; platform_machine != "aarch64"',
]

[project.scripts]
fingerprint-worker-api = "app.main:main"
fingerprint-worker-cli = "cli:run_cli"
fingerprint-worker-gui = "gui.__main__:main"

[tool.uv]
default-groups = []
